# Base-Airflow

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  poetry-requirements.txt  pyproject.toml
.github/: FUNDING.yml
airflow/: settings.yaml
airflow/dags/: example_dag_basic.py
